// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Store › Single Retrieve entity properties 1`] = `
Object {
  "_link": "http://example.com/category/nature",
  "id": 7,
  "link": Object {},
  "meta": Object {
    "canonical": null,
    "description": null,
    "pretty": false,
    "title": null,
  },
  "name": "Nature",
  "slug": "nature",
  "target": null,
  "taxonomy": "category",
}
`;

exports[`Store › Single Retrieve entity properties 2`] = `
Object {
  "_link": "http://example.com/category/nature",
  "id": 7,
  "link": Object {},
  "meta": Object {
    "canonical": null,
    "description": null,
    "pretty": false,
    "title": null,
  },
  "name": "New Nature",
  "slug": "nature",
  "target": null,
  "taxonomy": "category",
}
`;

exports[`Store › Single Retrieve entity properties 3`] = `
Object {
  "_link": "https://demo.worona.org/wp-cat/travel/",
  "id": 8,
  "link": Object {},
  "meta": Object {
    "canonical": null,
    "description": null,
    "pretty": false,
    "title": null,
  },
  "name": "Travel",
  "slug": "travel",
  "target": null,
  "taxonomy": "category",
}
`;

exports[`Store › Single Retrieve entity properties 4`] = `
Object {
  "_link": "https://demo.worona.org/tag/gullfoss/",
  "id": 10,
  "link": Object {},
  "meta": Object {
    "canonical": null,
    "description": null,
    "pretty": false,
    "title": null,
  },
  "name": "Gullfoss",
  "slug": "gullfoss",
  "target": null,
  "taxonomy": "tag",
}
`;

exports[`Store › Single Retrieve nested entities 1`] = `
Object {
  "_link": "http://example.com/post-60-slug/",
  "author": 4,
  "content": "<p>Gullfoss is a waterfall located in the canyon of the Hvita</p>",
  "creationDate": 1480095071000,
  "excerpt": null,
  "featured": 62,
  "fetching": false,
  "guid": null,
  "id": 60,
  "link": Object {},
  "meta": Object {
    "canonical": null,
    "description": null,
    "pretty": false,
    "title": null,
  },
  "modificationDate": 1506947028000,
  "ready": false,
  "slug": "post-60-slug",
  "target": null,
  "taxonomiesMap": Object {
    "category": Array [
      3,
      8,
    ],
    "tag": Array [
      10,
    ],
  },
  "title": "Post 60",
  "type": "post",
}
`;
